--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@ html {
 
 body {
   display: flex;
+  position: relative;
   flex-direction: column;
   min-height: 100%;
   margin: 0;
@@ -12,7 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  padding-bottom: 6.74rem;
 }
 
 .banner{
@@ -44,7 +45,6 @@ footer{
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;;
-    padding-top: 0.5px;
     color: #fff;
     flex-shrink: 0;
 }
