--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,19 @@ html {
   height: 100%;
 }
 
+footer{
+    background: #fff;
+    position: fixed;
+    bottom: 0;
+    height: auto;
+    width: 100vw;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;;
+    color: #000000;
+    flex-shrink: 0;
+}
+
 body {
   display: flex;
   position: relative;
@@ -16,37 +29,13 @@ body {
   padding-bottom: 8.5rem;
 }
 
-.banner{
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  box-sizing: border-box;
+header {
   background-image: linear-gradient(rgba(247, 235, 235, 0.75),rgba(240, 229, 229, 0.75)),url(../src/assets/images/white-bookcase.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-header {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   background-color: #333;
-
-}
-
-footer{
-    background: #111;
-    position: fixed;
-    bottom: 0;
-    height: auto;
-    width: 100vw;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;;
-    color: #fff;
-    flex-shrink: 0;
+  height: 400px;
 }
 
 code {
