--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,17 +2,17 @@ html {
   height: 100%;
 }
 
-footer{
-    background: #fff;
-    position: fixed;
-    bottom: 0;
-    height: auto;
-    width: 100vw;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+footer {
+  background: #fff;
+  position: fixed;
+  bottom: 0;
+  height: auto;
+  width: 100vw;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;;
-    color: #000000;
-    flex-shrink: 0;
+    sans-serif;
+  color: #000000;
+  flex-shrink: 0;
 }
 
 body {
@@ -33,3 +33,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
