--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -3,6 +3,7 @@
 }
 
 .home-header {
+  position: relative;
   background-image: linear-gradient(
       rgba(247, 235, 235, 0.75),
       rgba(255, 255, 255, 0.75)
@@ -15,10 +16,9 @@
   height: 400px;
 }
 
-
-.homescreen-css h2 {
-  color: #1f1919;
-  background-color: rgba(255, 255, 255, 0.5);
-  text-align: center;
-  font-size: 50px;
+.home-header .text-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
