Welcome text is now adjusted with size

--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -22,3 +22,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.home-header .text-container h1 {
+  color: rgb(0, 0, 0);
+  font-size: 3.6rem;
+}
