--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -14,6 +14,17 @@
   background-repeat: no-repeat;
   background-color: #333;
   height: 400px;
+  opacity: 0;
+  animation: fade-in 1s forwards;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1.5;
+  }
 }
 
 .home-header .text-container {
@@ -21,6 +32,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  opacity: 0;
+  animation: fade-in 1s 0.5s forwards;
 }
 
 .home-header .text-container h1 {
