Centered search and made it look pretty and all

--- a/frontend/src/screens/HomeScreen.css
+++ b/frontend/src/screens/HomeScreen.css
@@ -27,6 +27,14 @@
   }
 }
 
+h1{
+  text-align: center;
+}
+
+h2{
+  text-align: center;
+}
+
 .home-header .text-container {
   position: absolute;
   top: 50%;
